--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "description": "Template with dock panel using typescript and parcel setup",
   "main": "index.js",
   "license": "MIT",
-  "scripts" : { "build": "yarn parcel ./src/index.html"},
+  "scripts": {
+    "build": "yarn parcel ./src/index.html"
+  },
   "dependencies": {
     "@lumino/datagrid": "^2.0.0",
     "@lumino/default-theme": "^2.0.0",
     "@lumino/dragdrop": "^2.0.0",
     "lumino": "^2.6.0",
+    "luna-console": "^1.3.1",
+    "luna-data-grid": "^0.4.3",
+    "luna-dom-viewer": "^1.2.3",
+    "luna-object-viewer": "^0.2.4",
     "parcel": "^2.8.3"
   },
   "devDependencies": {
-    "@parcel/transformer-less": "2.8.3"
+    "@parcel/transformer-less": "2.8.3",
+    "process": "^0.11.10"
   }
 }
