--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "luna-data-grid": "^0.4.3",
     "luna-dom-viewer": "^1.2.3",
     "luna-object-viewer": "^0.2.4",
-    "parcel": "^2.8.3"
+    "parcel": "^2.8.3",
+    "tabulator-tables": "^5.4.4"
   },
   "devDependencies": {
     "@parcel/transformer-less": "2.8.3",
+    "buffer": "^5.5.0",
     "process": "^0.11.10"
   }
 }
