--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@lumino/datagrid": "^2.0.0",
     "@lumino/default-theme": "^2.0.0",
     "@lumino/dragdrop": "^2.0.0",
+    "bpmn-js": "^11.5.0",
+    "diagram-js": "^11.11.0",
     "lumino": "^2.6.0",
     "luna-console": "^1.3.1",
     "luna-data-grid": "^0.4.3",
