--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "yarn parcel ./src/index.html"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.1.4",
     "@lumino/datagrid": "^2.0.0",
     "@lumino/default-theme": "^2.0.0",
     "@lumino/dragdrop": "^2.0.0",
     "bpmn-js": "^11.5.0",
+    "codemirror": "^6.0.1",
     "diagram-js": "^11.11.0",
     "lumino": "^2.6.0",
     "luna-console": "^1.3.1",
